--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,12 +6,14 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:enabled="false">
+        <service android:name="CarSoundDetectionService"></service>
     </application>
 
 </manifest>
